css/printcontent-left.css
* {
	background: transparent !important;
	color: black !important;
	text-shadow: none !important;
	filter: none !important;
	-ms-filter: none !important;
}

a,a:visited {
	text-decoration: underline;
}

a[href]:after {
	content: " (" attr(href) ")";
}

abbr[title]:after {
	content: " (" attr(title) ")";
}

.ir a:after,a[href ^="javascript:"]:after,a[href ^="#"]:after {
	content: "";
}

pre,blockquote {
	border: 1px solid #999;
	page-break-inside: avoid;
}

thead {
	display: table-header-group;
}

tr,img {
	page-break-inside: avoid;
}

img {
	max-width: 100% !important;
}

@page {
	margin: 0.5cm;
}

p,h2,h3 {
	orphans: 3;
	widows: 3;
}

h1,h2,h3 {
	page-break-after: avoid;
	clear: both;
}

h1 {
	font-size: 1.6em;
}

h2 {
	font-size: 1.3em;
}

h3 {
	font-size: 1.2em;
}

table {
	width: 100%;
	border-collapse: collapse;
}

th,
td {
	width: 25%;
	border: 1px solid #999;
	text-align: left;
	padding: 2px 4px;
	vertical-align: top;
	font-size: 10pt;
}

table.half {
	width: 50%;
}

table.admission_letter th,
table.admission_letter td {
}

table.half td,
table.half th {
	width: 50%;
	border: none;
}

td.tall,
th.tall {
	height: 4em;
}

.right {
	float: right;
}

em {
	text-decoration: underline;
	font-style: normal;
	font-weight: bold;
}

html {
	height: 100%;
}

body {
	font-family: Helvetica, Arial, sans-serif;
	font-size: 10pt;
	display: block !important;
	width: 1050px !important;
}

.pageBreak {
	page-break-after: always;
}

.banner {
	height: 100px;
}

.banner.compact {
	height: 70px;
}

.banner .seal {
	float: left;
}

.banner .seal img {
	width: 96px;
}

.banner .logo {
	float: right;
}

.banner .logo img {
	width: 400px;
}

.banner.compact .logo img {
	width: 250px;
}

.fromAddress {
	padding-top:3em;
	clear: both;
	float: right;
	text-align: right;
	padding-top:3em;
}

.date {
	padding-top: 1em;
	clear: both;
	float: left;
	text-align: left;
	padding-top:3em;
}

.toAddress {
	padding-left:5em;
	padding-top:3em;
	width:200px;
}

.red {
	color: #f00 !important;
}

